# goit-homework

./: README.md
py_core/: README.md
py_core/clean_folder/: README.md  setup.py
py_core/lesoon9/: README.md  main.py
py_core/lesson1/: hw1.py.txt  hw2.py.txt
py_core/lesson10/: README.md  homework_10.py
py_core/lesson11/: README.md  (+1 more)
py_web/lesson03/: .dockerignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
py_web/lesson03/Py6PersonalAssistant/: addressbook.py  main.py  notes.py  сlean_folder.py
py_web/lesson03/Py6PersonalAssistant/clean_folder_tools/: file_parser.py  normalize.py
py_web/lesson09/Addinition task/: README.md  app_parser.py  config.ini  main.py  pyproject.toml
py_web/lesson09/Addinition task/alembic/: env.py
py_web/lesson09/Addinition task/alembic/versions/: f6e53af85c42_init.py
py_web/lesson13/: README.md  pyproject.toml
py_web/lesson13/Killer instagram/instagram/app_instagram/: admin.py  forms.py  models.py  urls.py  views.py
py_web/lesson13/Killer instagram/instagram/instagram/: settings.py  urls.py
py_web/lesson13/Killer instagram/instagram/users/: urls.py
py_web/lesson13/Killer instagram/instagram/users/templates/users/: logout.html  register.html
py_web/lesson13/Quotes/quotes/: config.ini  db_mongo.py  main.py
py_web/lesson13/Quotes/quotes/app_quotes/: forms.py  models.py  signals.py  urls.py  views.py
py_web/lesson13/Quotes/quotes/app_quotes/static/app_quotes/: style.css
py_web/lesson13/Quotes/quotes/app_quotes/templates/app_quotes/: base.html
py_web/lesson13/Quotes/quotes/quotes/: settings.py  urls.py
py_web/lesson13/Quotes/quotes/users/: views.py
py_web/lesson13/Quotes/quotes/users/templates/users/: signin.html
py_web/lesson13/безіменна папка/instagram/: db.sqlite3
py_web/lesson13/безіменна папка/instagram/app_instagram/migrations/: 0001_initial.py  0002_picture_user_alter_picture_path.py
py_web/lesson13/безіменна папка/instagram/app_instagram/templates/app_instagram/: base.html  edit.html  index.html  pictures.html  upload.html
py_web/lesson13/безіменна папка/instagram/users/: forms.py  views.py
py_web/lesson13/безіменна папка/instagram/users/templates/users/: login.html
py_web/lesson14/Task_2/: pyproject.toml
py_web/lesson14/Task_2/Scrapy with main.py/: README.md  authors.json  config.ini  create_db.py  db.py  main.py  models.py  quotes.json  seach_data.py
py_web/lesson14/Task_2/bs4/: README.md  losses.json  war_info.py
py_web/lesson14/Task_2/war_info/: README.md  links.json  losses.json
py_web/lesson14/Task_2/war_info/war_info/: pipelines.py  settings.py
py_web/lesson14/Task_2/war_info/war_info/spiders/: get_links.py  get_losses.py
py_web/lesson15/: README.md  main.py  pyproject.toml
py_web/lesson15/migrations/versions/: e2a2ed5c7526_init.py
py_web/lesson15/src/: schemas.py
py_web/lesson15/src/conf/: config.ini
py_web/lesson15/src/database/: models.py
py_web/lesson15/src/repository/: contacts.py
py_web/lesson15/src/routes/: contacts.py
py_web/lesson15/src/seed/: contacts_to_db.py
py_web/lesson16/: main.py  pyproject.toml
py_web/lesson16/src/repository/: contacts.py  users.py
py_web/lesson16/src/routes/: auth.py
py_web/lesson18/: .coverage  .gitignore  README.md  main.py  pyproject.toml  test.db
py_web/lesson18/docs/source/: conf.py  index.rst
py_web/lesson18/migrations/versions/: 7031cf389ed4_add_user.py  92b13a79f1f1_add_column_confirmed_to_users.py  e2a2ed5c7526_init.py
py_web/lesson18/src/: schemas.py
py_web/lesson18/src/conf/: config.py
py_web/lesson18/src/database/: db.py  models.py
py_web/lesson18/src/repository/: contacts.py  users.py
py_web/lesson18/src/routes/: auth.py  contacts.py  users.py
py_web/lesson18/src/seed/: contacts_to_db.py
py_web/lesson18/src/services/: auth.py
py_web/lesson18/src/services/email/: mail.py
py_web/lesson18/tests/: conftest.py  test_root.py  test_route_auth.py  test_routes_contacts.py  test_routes_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
(+149 files in other folders)
