[tool.poetry]
name = "HW6 PersonalAssistant"
version = "0.0.1"
description = "Homework 3  web"
authors = ["Ihor Voitiuk <igor.voyt98@gmail.com>"]
license = "MIT"
packages = [
    { include = "Py6PersonalAssistant" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.30"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_assistant = "Py6PersonalAssistant.main:main"
