[tool.poetry]
name = "web-module-07-part-2"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_module_07_part_2"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
