[tool.poetry]
name = "task-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_2"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
scrapy = "^2.8.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
